fix history layout bug

--- a/frontend/src/components/dir-view-mode/dir-history-view/index.css
+++ b/frontend/src/components/dir-view-mode/dir-history-view/index.css
@@ -4,7 +4,7 @@
   overflow: hidden;
 }
 
-.dir-history-view .sf-table-container {
+.dir-history-view .sf-table-result-container {
   height: 100%;
 }
 
